Add link to about

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Demonstration purposes only.</h1>
         <p>GNU Licensed.</p>
+        <a href="./about">Click here</a>
     </body>
 </html>
