--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Demonstration purposes only.</h1>
-        <p>GNU Licensed.</p>
+        <p>MIT Licensed.</p>
         <a href="./about">Click here</a>
     </body>
 </html>
